# game-retention-cookiecats

./: .gitignore  README.md  pyproject.toml
dashboard/: app.py
notebooks/: 01_eda.ipynb  02_ab_testing.ipynb
reports/: executive_summary.md
scripts/: 01_eda.py
